Change date format

--- a/src/app/pages/investment/investment.component.html
+++ b/src/app/pages/investment/investment.component.html
@@ -33,6 +33,7 @@
 
 <p-dialog header="Message" [(visible)]="display" [style]="{width: '50vw'}">
   <div style="text-align: center;">
-  <span>{{'label_coming_soon' | translate}}</span> <span style="font-weight: 600;"> {{schemeName}}</span>
-</div>
+    <span>{{'label_coming_soon' | translate}}</span>
+    <span style="font-weight: 600;"> "{{schemeName}}"</span>
+  </div>
 </p-dialog>
